<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".Login.Login">

    <TextView
        android:text="@string/txtBienvenidos"
        android:textSize="25dp"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/etPasswordU"
            android:hint="@string/etPasswordU"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/BtnEntrar"
        android:text="@string/BtnLogin"
        android:textColor="#fff"
        android:backgroundTint="#006400"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>