<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".OpcionesPassword.Agregar_Actualizar_Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--Titulo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtTitulo"
                android:hint="@string/txtTitulo"
                android:padding="15dp"
                android:textSize="25sp"
                android:maxLines="1"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Cuenta-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtCuenta"
                android:hint="@string/txtCuenta"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Nombre Cuenta-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNombreUsuario"
                android:hint="@string/txtNombreUsuario"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">


            <EditText
                android:id="@+id/txtPassword"
                android:hint="@string/txtPassword"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Sitio Web-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtSitioWeb"
                android:hint="@string/txtSitioWeb"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textWebEmailAddress"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!--Nota-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNota"
                android:hint="@string/txtNota"
                android:height="150dp"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>