<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.F_Ajustes">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Txt_Ajustes"
            android:fontFamily="@font/opensans_bold"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/Eliminar_Todos_Registros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Eliminar_Todos_registros"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_eliminar_registros"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/Exportar_Archivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Exportar_Archivo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_importar_exportar"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:id="@+id/Importar_Archivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Importar_Archivo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_importar_exportar"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>